<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Movie Info</string>
    <string name="textView1">Enter Movie Title:</string>
    <string name="editText1">Example: Scary Movie 2</string>
    <string name="textView3">Movie Rating:</string>
    <string name="textView2">Movie Length:</string>
    <string name="textView4">Critics Rating:</string>
    <string name="textView5">Main Actor:</string>
    <string name="button">Clear</string>
    <string name="button2">Search</string>
</resources>
