<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="260dp"
    android:id="@+id/display_fragment"
    android:layout_alignRight="@+id/list_fragment"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailView3"
        android:textSize="20dp"
        android:hint="@string/textView3"
        android:textColorHint="#555"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailView"
        android:textSize="25dp"
        android:layout_below="@+id/tvDetailView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailView4"
        android:textSize="20dp"
        android:hint="@string/textView2"
        android:textColorHint="#555"
        android:layout_below="@+id/tvDetailView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailView2"
        android:textSize="25dp"
        android:layout_below="@+id/tvDetailView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailView5"
        android:textSize="20dp"
        android:hint="@string/textView4"
        android:textColorHint="#555"
        android:layout_below="@+id/tvDetailView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailView6"
        android:textSize="25dp"
        android:layout_below="@+id/tvDetailView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailView7"
        android:textSize="20dp"
        android:hint="@string/textView5"
        android:textColorHint="#555"
        android:layout_below="@+id/tvDetailView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvDetailView8"
        android:textSize="25dp"
        android:layout_below="@+id/tvDetailView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>